updated photos and text for becky, replaced chihiro with mariliza

--- a/password-protected.html
+++ b/password-protected.html
@@ -277,7 +277,7 @@
                                     </div>
                                     <div class="person-info">
                                         <h2>Becky Doucette</h2>
-                                        <p>Cola’s Oldest Friend & Bridesmaid</p>
+                                        <p>Cola’s Oldest Friend & Bridesmaid, Escorting Chihiro</p>
                                     </div>
                                 </div>
                             </div>
@@ -395,12 +395,12 @@
                                 <div class="team-single-wrapper">
                                     <div class="team-single">
                                         <div class="person-thumb">
-                                            <img src="images/party-photos/Chihiro.png" class="img-responsive" alt="">
+                                            <img src="images/party-photos/Mariliza.png" class="img-responsive" alt="">
                                         </div>
                                     </div>
                                     <div class="person-info">
-                                        <h2>Chihiro</h2>
-                                        <p>Best Dog of Honor</p>
+                                        <h2>Mariliza Parker</h2>
+                                        <p>Cola's Cousin, Performing Ceremony Reading</p>
                                     </div>
                                 </div>
                             </div>
