removed rsvpify form, moved map to top, added rsvp link, fixed colors

--- a/password-protected.html
+++ b/password-protected.html
@@ -47,10 +47,34 @@
     </section>
     <!--/#home-slider-->
 
-    <section id="features">
-
+    <section id="services">
+        <div class="container-fluid">
+            <div class="row">
+                <div>
+                    <iframe
+                            width="70%"
+                            height="450"
+                            frameborder="0" style="border:0"
+                            src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCfn9Ruuh-tDjwzXVTaQRkjvhEkY5XH65c&q=Prospect+Park+Audobon+Center,Brooklyn+NY"
+                            allowfullscreen>
+                    </iframe>
+                </div>
+                <div class="map-text">
+                    <div>
+                        <h2>Celebrate with Us!</h2>
+                        <p>Ceremony at 5:30pm</p>
+                        <p>September 23, 2018</p>
+                        <p>The Boathouse at Prospect Park</p>
+                        <p>Reception to Follow</p>
+                        <p><a target="_blank" href="https://www.google.com/maps/place/Prospect+Park+Boathouse+%2B+Audubon+Center/@40.6608255,-73.9674331,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25b13d59e44bb:0x4374a72cee20ff31!8m2!3d40.6608215!4d-73.9652444">101 East Dr, Brooklyn, NY 11225</a></p>
+                        <p>Parking Available Nearby</p>
+                        <a href="http://benandcola.rsvpify.com" target="_blank">RSVP</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
-    <!--/#features-->
+    <!--/#services-->
 
     <section id="faq">
         <div class="container-fluid padding-left padding-right">
@@ -421,34 +445,6 @@
         </div>
     </section>
     <!--/#team-->
-
-    <section id="services">
-        <div class="container-fluid">
-            <div class="row">
-                <div>
-                    <iframe
-                            width="70%"
-                            height="450"
-                            frameborder="0" style="border:0"
-                            src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCfn9Ruuh-tDjwzXVTaQRkjvhEkY5XH65c&q=Prospect+Park+Audobon+Center,Brooklyn+NY"
-                            allowfullscreen>
-                    </iframe>
-                </div>
-                <div class="map-text">
-                    <div>
-                        <h2>Celebrate with Us!</h2>
-                        <p>Ceremony at 5:30pm</p>
-                        <p>September 23, 2018</p>
-                        <p>The Boathouse at Prospect Park</p>
-                        <p>Reception to Follow</p>
-                        <p><a target="_blank" href="https://www.google.com/maps/place/Prospect+Park+Boathouse+%2B+Audubon+Center/@40.6608255,-73.9674331,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25b13d59e44bb:0x4374a72cee20ff31!8m2!3d40.6608215!4d-73.9652444">101 East Dr, Brooklyn, NY 11225</a></p>
-                        <p>Parking Available Nearby</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--/#services-->
 
     <section id="end">
         <div class="container-fluid">
