--- a/password-protected.html
+++ b/password-protected.html
@@ -117,7 +117,7 @@
                         </div>
                         <h2>Rehearsal Dinner at Berg’n</h2>
                         <p>We hope you'll join us for a pre-wedding dinner <br/> at 6:00p.m. on September 22nd,<br/> hosted by Richard Solwitz & Kim Brustoski</p>
-                        <p>Have a beer and get to know our closest friends, we think you’ll all get along fabulously. Dinner will be served casual cocktail style so you can  get to know to everyone.</p>
+                        <p>Have a beer and get to know our closest friends, we think you’ll all get along fabulously. Dinner will be served casual cocktail style so you can meet everyone.</p>
                         <p><a target="_blank" href="https://www.google.com/maps/place/Berg'n/@40.6772614,-73.9593843,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25b9f2d36229d:0xcf3837638bf68bc2!8m2!3d40.6772614!4d-73.9571956">899 Bergen St, Brooklyn, NY 11238</a></p>
                     </div>
                 </div>
