fixed tom's last name

--- a/password-protected.html
+++ b/password-protected.html
@@ -397,7 +397,7 @@
                                         </div>
                                     </div>
                                     <div class="person-info">
-                                        <h2>Tom Clark</h2>
+                                        <h2>Tom Clarke</h2>
                                         <p>Cola’s Uncle & Musician</p>
                                     </div>
                                 </div>
